syntax = "proto3";

package sampledomain;

message ApplicationRegistrationCreated {
    string aggregateId = 1;
    string name = 2;
    string description = 3;
    int64 createTimestamp = 4;
}